--- a/src/main/resources/templates/horoscope.html
+++ b/src/main/resources/templates/horoscope.html
@@ -1,29 +1,336 @@
 <!doctype html>
 <html lang="en">
-
 <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Horoscope Signss </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <!-- Google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Titan+One&display=swap" rel="stylesheet">
 </head>
-
 <body>
-    <nav>
-        <ul>
-            <li><a href="/index">Home Page</a></li>
-            <li><a href="/about">About Us</a></li>
-            <li><a href="/birthmonth">Birth Months</a></li>
-            <li><a href="/horoscope">Horoscope Signs</a></li>
-            <li><a href="/contactus">Contact Us</a></li>
-    
-        </ul>
+    <nav class="navbar navbar-expand-lg ">
+        <div class="container">
+            <a class="navbar-brand" href="/index">Horo Flowers</a>
+            <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+                aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarScroll">
+                <ul class="navbar-nav m-auto my-2 my-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/index">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/birthmonth">Birth Flowers</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/horoscope">Find your Horoscope</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/contactus">Contact Us</a>
+                    </li>
+                </ul>
+                <form class="d-flex">
+                    <input class="px-3 find" type="search" placeholder=" Search here" aria-label="Search">
+                    <button class="findbtn" type="submit"> Search</button>
+                </form>
+            </div>
+        </div>
     </nav>
-    
+    <section class="horohook">
+        <div class="container py-4">
+            <div class="row py-5">
+                <div class="col-lg-12 ">
+                    <h1 class="pt-5 text-center"> Learn Your Horoscope!</h1>
+                </div>
+            </div>
+        </div>
+    </section>
 
-    <footer class="container">
-        <p>&copy; Company 2017-2019</p>
-    </footer>   
+    <section class="Horoscope">
+        <div class="container py-8 text-center">
+            <div class="row py-4 ">
+                <div class="col-lg-12 m-auto">
+                    <h1 class="fph1"> Horoscope</h1>
+                    <p class="bwrite">As astrologers, we define a horoscope as the astrological forecast of a person or
+                        a point in time determined using planetary placements in either the sidereal or tropical Zodiac.
+                        The estimates are based on the birth date, and time. That's why a horoscope, like a signature,
+                        and is so unique to your month.
+                        <br><br> You can find your relating sign by using your birth date below.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Horocope Sections -->
+    <section id="scope" class="py-5">
+        <div class="container">
+            <div class="row align-items-center ">
+                <div class="col-lg">
+                    <img src="img/AQ.jpg" class="img-fluid" />
+                </div>
+                <div class="col-lg py-5">
+                    <h2 class="fph1">Aquarius: 21st January - 19th February</h2>
+                    <p class="bwrite">
+                        Aquarius, you are born in the eleventh house of the Zodiac. You are typically self-sufficient,
+                        kind, compassionate, and imaginative. Your fortunate colours are light blue and purple. Your
+                        opposing sign is Leo, and you are the least harmonious with Cancer and Virgo.
+                        You get along best with Gemini, Libra, and Aquarius.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="scope" class="dark">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg py-5">
+                    <h2 class="fph2">Pisces: 23rd February - 23rd March </h2>
+                    <p class="bwrite">
+                        Pisces, you are born under the sign of the twelfth house of the Zodiac. Generally, you are
+                        perceptive, trustworthy, caring, and artistic. Purple and  turquoise are lucky colours for you.
+                        Virgo is your polar opposite.
+                        You are most suitable with Cancer, Scorpio, and Pisces and least suitable with Leo and Libra.
+                    </p>
+                </div>
+                <div class="col-lg">
+                    <img src="img/PI.jpg" class="img-fluid" />
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="scope" class="py-5">
+        <div class="container">
+            <div class="row align-items-center ">
+                <div class="col-lg">
+                    <img src="img/AI.jpg" class="img-fluid" />
+                </div>
+                <div class="col-lg py-5">
+                    <h2 class="fph1">Aries: 21st March - 20th April</h2>
+                    <p class="bwrite">
+                        Aries, you are born in the first house of the Zodiac. You are generally brave, active,
+                        competitive, and forward-thinking. Your best colours are  wine red and cream. Libra is your
+                        polar opposite, and you get along the least with Virgo and Scorpio.
+                        You get along best with Leo, Sagittarius, and Aries.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="scope" class="dark">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg py-5">
+                    <h2 class="fph2">Taurus: 20 april - 20 may</h2>
+                    <p class="bwrite">
+                        Taurus, you are born under the sign of the second house of the Zodiac. Generally, you are
+                        loving, loyal, wealthy, and patient. Your fortunate colour is green. Scorpio is your polar
+                        opposite, and you get along the least with Libra and Sagittarius.
+                        You get along best with Virgo, Capricorn, and Taurus.
+                    </p>
+                </div>
+                <div class="col-lg">
+                    <img src="img/T.jpg" class="img-fluid" />
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="scope" class="py-5">
+        <div class="container">
+            <div class="row align-items-center ">
+                <div class="col-lg">
+                    <img src="img/GEM.jpg" class="img-fluid" />
+                </div>
+                <div class="col-lg py-5">
+                    <h2 class="fph1">Gemini: May 21 - June 21 </h2>
+                    <p class="bwrite">
+                        Gemini, you are born in the third house of the Zodiac. You are generally fast, inquisitive,
+                        amusing, and empathetic. Your best colours are light yellow and citrus orange. Your opposing
+                        sign is Sagittarius, and you are least suited with Scorpio and Capricorn.
+                        Libra, Aquarius, and Gemini are your most harmonious signs.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="scope" class="dark">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg py-5">
+                    <h2 class="fph2">Cancer: June 22 - July 22</h2>
+                    <p class="bwrite">
+                        Cancer, you are born under the sign of the fourth house of the Zodiac. You are typically
+                        sympathetic, kind, nurturing, and astute.   Your fortunate colours are platinum and cream.
+                        Capricorn is your polar opposite, and you get along the least with Sagittarius and Aquarius.
+                        Pisces, Scorpio, and Cancer are your most harmonious signs.
+                    </p>
+                </div>
+                <div class="col-lg">
+                    <img src="img/CAN.jpg" class="img-fluid" />
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="scope" class="py-5">
+        <div class="container">
+            <div class="row align-items-center ">
+                <div class="col-lg">
+                    <img src="img/LEO.jpg" class="img-fluid" />
+                </div>
+                <div class="col-lg py-5">
+                    <h2 class="fph1">Leo: July 23 - August 22</h2>
+                    <p class="bwrite">
+                        Leo, you are born in the fifth house of the Zodiac. You are typically giving, forceful, loyal,
+                        and dependable. Your fortunate colours will be yellow and crimson.
+                        Your opposing sign is Aquarius, and you are least suited with Pisces and Capricorn.You get along
+                        best with Aries, Sagittarius, and Leo.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="scope" class="dark">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg py-5">
+                    <h2 class="fph2">Virgo: August 23 - September 22</h2>
+                    <p class="bwrite">
+                        Virgo, you are born in the sixth house of the Zodiac. You are typically attentive, kind, and
+                        considerate.
+                        Your best colours are royal blue and grey. Pisces is your polar-opposite. You get along the
+                        least with Aries and Aquarius and the most with Taurus, Capricorn, and Virgo.
+                    </p>
+                </div>
+                <div class="col-lg">
+                    <img src="img/VIR.jpg" class="img-fluid" />
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="scope" class="py-5">
+        <div class="container">
+            <div class="row align-items-center ">
+                <div class="col-lg">
+                    <img src="img/LIB.jpg" class="img-fluid" />
+                </div>
+                <div class="col-lg py-5">
+                    <h2 class="fph1">Libra: September 23 - October 22</h2>
+                    <p class="bwrite">
+                        Libra, you are born in the seventh house of the Zodiac. You are typically creative, composed,
+                        analytical, and endearing. Mid-blues and pale pink are your fortunate colours. Your opposing
+                        sign is Aries, and you are least suited with Pisces and Taurus.
+                        You get along best with Gemini, Libra, and Aquarius.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="scope" class="dark">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg py-5">
+                    <h2 class="fph2">Scorpio: October 23 - November 21 </h2>
+                    <p class="bwrite">
+                        Scorpio, you are born under Zodiac's eighth house. You are generally energetic, lively,
+                        seductive, and perceptive. Black and crimson are your favorable colours. Taurus is your polar
+                        opposite sign.
+                        You are least suited with Aries and Gemini. You are most harmonious with Cancer, Pisces, and
+                        Scorpio.
+                    </p>
+                </div>
+                <div class="col-lg">
+                    <img src="img/SCR.jpg" class="img-fluid" />
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="scope" class="py-5">
+        <div class="container">
+            <div class="row align-items-center ">
+                <div class="col-lg">
+                    <img src="img/SAG.jpg" class="img-fluid" />
+                </div>
+                <div class="col-lg py-5">
+                    <h2 class="fph1">Sagittarius: November 22 - December 21</h2>
+                    <p class="bwrite">
+                        Sagittarius, you are born in the ninth house of the Zodiac. You are typically smart, passionate,
+                        forgiving, and upbeat.  deep  Purple and regal blue are your favorable colours. Your reverse
+                        sign is Gemini, and you are least suited with Cancer and Taurus.
+                        You get along best with Aries, Leo, and Taurus.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="scope" class="dark">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg py-5">
+                    <h2 class="fph2">Capricorn: December 22 - January 19</h2>
+                    <p class="bwrite">
+                        Capricorn, you are born in the tenth house of the Zodiac. You are typically cautious, diligent,
+                        obedient, and conventional. Saturn is your natal planet. Colours such as black and green usually
+                        give you good fortune. Cancer is your polar opposite.
+                        You get along the least with Gemini and Leo and the most with Taurus, Virgo, and Capricorn.
+                    </p>
+                </div>
+                <div class="col-lg">
+                    <img src="img/CAP.jpg" class="img-fluid" />
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="footer py-6">
+        <div class="container py-5">
+            <div class="row">
+                <div class="col-lg-8 m-auto text-center">
+                    <h1 class="footh1"> Get Up-To-Date info on Flower Care</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="row">
+                        <div class="foot-lg col-lg-4">
+                            <h4 class="foot-t"> Useful links</h4>
+                            <ul class="foot-nav m-auto my-2 my-lg-0">
+                                <li class="foot-item"> <a class="foot-link active" href="/contactus">Contact Us</a></li>
+                                <li class="foot-item"> <a class="foot-link active" href="/horoscope">Terms of
+                                        service</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-4">
+                            <h4 class="foot-t"> Help</h4>
+                            <ul class="foot-nav m-auto my-2 my-lg-0">
+                                <li class="foot-item"> <a class="foot-link" href="/birthmonth">Flower index</a></li>
+                                </li>
+                                <li class="foot-item"> <a class="foot-link active" href="/horoscope">Find your
+                                        Horoscope</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-3">
+                            <h4 class="foot-t">Satifaction Gurantee</h4>
+                            <p class="footp"> Our website is guranteed to help you find theright flowers for you sign.
+                            </p>
+                            <p class="footp"> If you find yourself struggling to pick the right one, get in touch.</p>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <p> Copyright ©2022 All Rights Reserved. </p>
+        </div>
+        </div>
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
-
 </html>
