--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -36,11 +36,7 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="/contactus">Contact Us</a>
                     </li>
-                </ul>
-                <form class="d-flex">
-                    <input class="px-3 find" type="search" placeholder=" Search here" aria-label="Search">
-                    <button class="findbtn" type="submit"> Search</button>
-                </form>
+                </ul>               
             </div>
         </div>
     </nav>
@@ -50,7 +46,8 @@
             <div class="row py-3">
                 <div class="col-lg-6 ">
                     <h1 class="pt-5"> Find Flowers Right For Your Life</h1>
-                    <button class="shopbtn mt-4" a href="/horoscope"> Find Sign</button>
+                    <!-- button  -->
+                    <a class="finds" href="/horoscope">Find Signs</a>
                 </div>
             </div>
         </div>
