--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -45,7 +45,7 @@
         <div class="container py-4">
             <div class="row py-3">
                 <div class="col-lg-6 ">
-                    <h1 class="pt-5"> Find Cars Right For Your Life</h1>
+                    <h1 class="pt-5"> Find Flowers Right For Your Life</h1>
                     <!-- button  -->
                     <a class="finds" href="/horoscope">Find Signs</a>
                 </div>
